--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Cloning GoodRead with React and node.js",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js",
+    "start": "nodemon --exec babel-node init.js  --delay 2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lim HongKyu",
@@ -13,7 +13,12 @@
     "@babel/core": "^7.8.4",
     "@babel/node": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "helmet": "^3.21.3",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
